[package]
name = "craftserve"
version = "0.1.0"
authors = ["Ethan McTague <ethan@tague.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "*"
num-derive = "*"
uuid = { version = "0.7", features = [ "v3" ] }
rand = "0.7"
